# SDLBitmapFont

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog  LICENSE.txt  README.md  SDLBitmapFont.cpp  SDLBitmapFont.h  build_sample.sh
font/: VP16Font.xcf
sample/: SDLBitmapFontSample.cpp
